--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/react,python,vim,intellij,macos
-# Edit at https://www.gitignore.io/?templates=react,python,vim,intellij,macos
+# Created by https://www.gitignore.io/api/react,python,virtualenv,vim,intellij,macos
+# Edit at https://www.gitignore.io/?templates=react,python,virtualenv,vim,intellij,macos
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -259,4 +259,23 @@ tags
 # Persistent undo
 [._]*.un~
 
-# End of https://www.gitignore.io/api/react,python,vim,intellij,macos
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-selfcheck.json
+
+# End of https://www.gitignore.io/api/react,python,virtualenv,vim,intellij,macos
