Added credentials.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+credentials.json
 
 # Created by https://www.gitignore.io/api/react,python,virtualenv,vim,intellij,macos
 # Edit at https://www.gitignore.io/?templates=react,python,virtualenv,vim,intellij,macos
