--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Install NPM packages
       run: cd webapp && npm install
     - name: Run unit tests for React webapp
-      run: npm test
+      run: cd webapp && npm test
     - name: Create production build of React webapp
-      run: npm run build
+      run: cd webapp && npm run build
     - name: Setup Python environment
       uses: actions/setup-python@v1.1.1
     - name: Install pipenv
