--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install NPM packages
       run: cd webapp && npm install
     - name: Run unit tests for React webapp
-      run: cd webapp && npm test
+      run: cd webapp && npm run test
     - name: Create production build of React webapp
       run: cd webapp && npm run build
     - name: Setup Python environment
