--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     - name: Run unit tests for Python 3 server
-      run: pipenv --three --bare run python3 -m test
+      run:  pipenv run python3 -m test
