--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,7 @@ jobs:
       uses: actions/setup-python@v1.1.1
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
+    - name: Install Python dependencies with pipenv
+      run: pipenv install
     - name: Run unit tests for Python 3 server
-      run:  pipenv run python3 -m test
+      run: pipenv run python3 -m test
