--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,34 @@
+# vim: set ts=2 sw=2 sta sts=2 sr et ai si:
 name: Build and test
 
-on: [push]
+on: push
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x, 15.x]
+        python-version: [3.5, 3.6, 3.7, 3.8]
+
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Node.js for use with actions
-      uses: actions/setup-node@v1.1.0
-    - name: Install NPM packages
-      run: cd webapp && npm install
-    - name: Run unit tests for React webapp
-      run: cd webapp && CI=true npx react-scripts test --env=jsdom
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Clean-install NPM packages
+      run: cd webapp && npm ci
     - name: Create production build of React webapp
-      run: cd webapp && npm run build
+      run: cd webapp && npm run build --if-present
+    - name: Run unit tests for React webapp
+      run: cd webapp && CI=true npm test --env=jsdom
     - name: Setup Python environment
-      uses: actions/setup-python@v1.1.1
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     - name: Install Python dependencies with pipenv
